--- a/src/main/resources/views/playerLobbyView.fxml
+++ b/src/main/resources/views/playerLobbyView.fxml
@@ -13,18 +13,18 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.playerLobbyController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="70.0" style="-fx-background-color: #fdf8da;" text="Player Lobby" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="SCRABBLE" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <font>
             <Font name="Chalkboard" size="48.0" />
          </font>
       </Label>
       <Label layoutX="278.0" layoutY="331.0" prefHeight="100.0" style="-fx-background-color: #fdf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Button mnemonicParsing="false" onMouseClicked="#backToLogin" prefHeight="35.0" prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Back To Login" textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="15.0">
+      <Button mnemonicParsing="false" onMouseClicked="#backToLogin" prefHeight="35.0" prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Back To Login" textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
          <font>
             <Font name="Chalkboard" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="990.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#exitGame" prefHeight="35.0" prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="EXIT" textAlignment="CENTER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
+      <Button layoutX="990.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#exitGame" prefHeight="35.0" prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="EXIT" textAlignment="CENTER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
          <font>
             <Font name="Chalkboard" size="18.0" />
          </font>
@@ -65,7 +65,7 @@
                         <Font name="Chalkboard" size="36.0" />
                      </font>
                      <HBox.margin>
-                        <Insets bottom="10.0" left="30.0" top="30.0" />
+                        <Insets bottom="10.0" left="20.0" top="35.0" />
                      </HBox.margin>
                   </Label>
                   <Label fx:id="username" alignment="CENTER" contentDisplay="CENTER" text="&lt;Username&gt;">
@@ -73,15 +73,15 @@
                         <Font name="Chalkduster" size="36.0" />
                      </font>
                      <HBox.margin>
-                        <Insets bottom="10.0" top="30.0" />
+                        <Insets bottom="10.0" right="20.0" top="35.0" />
                      </HBox.margin>
                   </Label>
                   <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#manageProfiles" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
                      <HBox.margin>
-                        <Insets bottom="10.0" left="20.0" right="20.0" top="30.0" />
+                        <Insets bottom="10.0" left="20.0" right="20.0" top="35.0" />
                      </HBox.margin>
                      <image>
-                        <Image url="@../player_profile.png" />
+                        <Image url="@../pictures/player_profile.png" />
                      </image>
                   </ImageView>
                </children>
