--- a/src/main/resources/views/playerLobbyView.fxml
+++ b/src/main/resources/views/playerLobbyView.fxml
@@ -41,7 +41,7 @@
                         <Font name="Chalkboard" size="18.0" />
                      </font>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#manageProfiles" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Manage Profiles">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#changeToProfileView" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Manage Profiles">
                      <font>
                         <Font name="Chalkboard" size="18.0" />
                      </font>
@@ -76,7 +76,7 @@
                         <Insets bottom="10.0" right="20.0" top="35.0" />
                      </HBox.margin>
                   </Label>
-                  <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#manageProfiles" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
+                  <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#changeToProfileView" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
                      <HBox.margin>
                         <Insets bottom="10.0" left="20.0" right="20.0" top="35.0" />
                      </HBox.margin>
