--- a/src/main/resources/views/joinGame.fxml
+++ b/src/main/resources/views/joinGame.fxml
@@ -48,17 +48,17 @@
             <Image url="@../pictures/scrabble.png" />
          </image>
       </ImageView>
-      <Button layoutX="14.0" layoutY="12.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/buttonstyle.css" text="&lt;Back to Player Lobby ">
+      <Button layoutX="14.0" layoutY="12.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/stylesheets/buttonstyle.css" text="&lt;Back to Player Lobby ">
          <font>
             <Font name="Chalkboard" size="13.0" />
          </font>
       </Button>
-      <Button layoutX="535.0" layoutY="14.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/buttonstyle.css" text="Exit">
+      <Button layoutX="535.0" layoutY="14.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/stylesheets/buttonstyle.css" text="Exit">
          <font>
             <Font name="Chalkboard" size="13.0" />
          </font>
       </Button>
-      <Button layoutX="319.0" layoutY="236.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/buttonstyle.css" text="JOIN">
+      <Button layoutX="319.0" layoutY="236.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/stylesheets/buttonstyle.css" text="JOIN">
          <font>
             <Font name="Chalkboard" size="13.0" />
          </font>
