--- a/src/main/resources/views/playScrabble.fxml
+++ b/src/main/resources/views/playScrabble.fxml
@@ -47,12 +47,12 @@
             <Font name="Chalkboard" size="24.0" />
          </font>
       </Text>
-      <Button layoutX="534.0" layoutY="13.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/buttonstyle.css" text="Exit">
+      <Button layoutX="534.0" layoutY="13.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/stylesheets/buttonstyle.css" text="Exit">
          <font>
             <Font name="Chalkboard" size="13.0" />
          </font>
       </Button>
-      <Button layoutX="22.0" layoutY="11.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/buttonstyle.css" text="&lt;Back to Player Lobby">
+      <Button layoutX="22.0" layoutY="11.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/stylesheets/buttonstyle.css" text="&lt;Back to Player Lobby">
          <font>
             <Font name="Chalkboard" size="13.0" />
          </font>
