--- a/src/main/resources/views/settings.fxml
+++ b/src/main/resources/views/settings.fxml
@@ -77,7 +77,7 @@
             <Image url="@../pictures/settings.png" />
          </image>
       </ImageView>
-      <Button layoutX="21.0" layoutY="10.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="151.0" stylesheets="@/buttonstyle.css" text="&lt;Back to player Lobby">
+      <Button layoutX="21.0" layoutY="10.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="151.0" stylesheets="@/stylesheets/buttonstyle.css" text="&lt;Back to player Lobby">
          <font>
             <Font name="Chalkboard" size="13.0" />
          </font>
@@ -86,7 +86,7 @@
             <String fx:value="smallButton" />
          </styleClass>
       </Button>
-      <Button layoutX="527.0" layoutY="12.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/buttonstyle.css" text="Exit ">
+      <Button layoutX="527.0" layoutY="12.0" mnemonicParsing="false" styleClass="smallButton" stylesheets="@/stylesheets/buttonstyle.css" text="Exit ">
          <font>
             <Font name="Chalkboard" size="13.0" />
          </font>
