--- a/src/main/resources/stylesheets/buttonstyle.css
+++ b/src/main/resources/stylesheets/buttonstyle.css
@@ -16,3 +16,12 @@
     -fx-effect: innershadow(gaussian, rgba(0,0,0,0.7), 7,0,0,0);
     -fx-cursor: hand;
 }
+
+.label{
+    -fx-background-color: #d7d96c;
+    -fx-background-radius: 15;
+    -fx-border-width: 1;
+    -fx-border-color: black;
+    -fx-border-radius: 15;
+    -fx-effect: innershadow(gaussian, rgba(0,0,0,0.7), 10,0,0,0);
+}
