--- a/src/main/resources/views/playerLobbyView.fxml
+++ b/src/main/resources/views/playerLobbyView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.playerLobbyController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.PlayerLobbyController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="SCRABBLE" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <font>
@@ -78,7 +78,7 @@
                   </Label>
                   <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#changeToProfileView" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
                      <HBox.margin>
-                        <Insets bottom="10.0" left="20.0" right="20.0" top="35.0" />
+                        <Insets bottom="10.0" left="10.0" right="20.0" top="35.0" />
                      </HBox.margin>
                      <image>
                         <Image url="@../pictures/ProfileIcon.png" />
