--- a/src/main/resources/views/createGame.fxml
+++ b/src/main/resources/views/createGame.fxml
@@ -1,106 +1,150 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.PlayerLobbyController">
     <children>
-        <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="96.0" layoutY="33.0" pickOnBounds="true"
-                   preserveRatio="true" rotate="-20.0">
-            <image>
-                <Image url="@../pictures/profile.jpg"/>
-            </image>
-        </ImageView>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fbf8da" height="50.0" stroke="BLACK" strokeType="INSIDE"
-                   width="600.0"/>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fbf8da" height="75.0" layoutY="325.0" stroke="BLACK"
-                   strokeType="INSIDE" width="600.0"/>
-        <Text layoutX="253.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Game">
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="Create Game " textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <font>
-                <Font name="Chalkboard" size="20.0"/>
+                <Font name="Chalkboard" size="48.0" />
             </font>
-        </Text>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fbf8da" height="230.0" layoutX="165.0" layoutY="72.0"
-                   opacity="0.5" stroke="BLACK" strokeType="INSIDE" width="270.0"/>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="50.0" layoutX="190.0" layoutY="87.0"
-                   opacity="0.5" stroke="BLACK" strokeType="INSIDE" width="220.0"/>
-        <Text layoutX="209.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Creating Game...">
+        </Label>
+        <Label layoutX="278.0" layoutY="331.0" prefHeight="100.0" style="-fx-background-color: #fdf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+        <Button mnemonicParsing="false" onMouseClicked="#backToLogin" prefHeight="37.0" prefWidth="207.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Back To Player Lobby" textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
             <font>
-                <Font name="Chalkboard" size="24.0"/>
-            </font>
-        </Text>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="105.0" layoutX="190.0" layoutY="148.0"
-                   opacity="0.5" stroke="BLACK" strokeType="INSIDE" width="105.0"/>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c4c4c4" height="140.0" layoutX="310.0" layoutY="148.0"
-                   opacity="0.5" stroke="BLACK" strokeType="INSIDE" width="100.0"/>
-        <Text layoutX="193.0" layoutY="169.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search Player:">
-            <font>
-                <Font name="Chalkboard" size="14.0"/>
-            </font>
-        </Text>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fbf8da" height="25.0" layoutX="200.0" layoutY="180.0"
-                   stroke="BLACK" strokeType="INSIDE" width="90.0"/>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fbf8da" height="20.0" layoutX="320.0" layoutY="155.0"
-                   stroke="BLACK" strokeType="INSIDE" width="80.0"/>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fbf8da" height="20.0" layoutX="320.0" layoutY="180.0"
-                   stroke="BLACK" strokeType="INSIDE" width="80.0"/>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fbf8da" height="20.0" layoutX="320.0" layoutY="205.0"
-                   stroke="BLACK" strokeType="INSIDE" width="80.0"/>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fbf8da" height="20.0" layoutX="320.0" layoutY="230.0"
-                   stroke="BLACK" strokeType="INSIDE" width="80.0"/>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fbf8da" height="20.0" layoutX="320.0" layoutY="255.0"
-                   stroke="BLACK" strokeType="INSIDE" width="80.0"/>
-        <Text layoutX="323.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scrabble Team">
-            <font>
-                <Font name="Chalkboard" size="11.0"/>
-            </font>
-        </Text>
-        <Text layoutX="349.0" layoutY="193.0" strokeType="OUTSIDE" strokeWidth="0.0" text="YOU">
-            <font>
-                <Font name="Chalkboard" size="11.0"/>
-            </font>
-        </Text>
-        <ImageView fitHeight="40.0" fitWidth="50.0" layoutX="380.0" layoutY="6.0" pickOnBounds="true"
-                   preserveRatio="true">
-            <image>
-                <Image url="@../pictures/scrabble-2.png"/>
-            </image>
-        </ImageView>
-        <Button layoutX="531.0" layoutY="13.0" mnemonicParsing="false" styleClass="smallButton"
-                stylesheets="@/stylesheets/buttonstyle.css" text="Exit">
-            <font>
-                <Font name="Chalkboard" size="13.0"/>
+                <Font name="Chalkboard" size="18.0" />
             </font>
         </Button>
-        <Button layoutX="21.0" layoutY="14.0" mnemonicParsing="false" styleClass="smallButton"
-                stylesheets="@/stylesheets/buttonstyle.css" text="&lt;Back to Player Lobby">
+        <Button layoutX="990.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#exitGame" prefHeight="35.0" prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="EXIT" textAlignment="CENTER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
             <font>
-                <Font name="Chalkboard" size="13.0"/>
+                <Font name="Chalkboard" size="18.0" />
             </font>
         </Button>
-        <Button layoutX="263.0" layoutY="210.0" mnemonicParsing="false" styleClass="smallButton"
-                stylesheets="@/stylesheets/buttonstyle.css" text="+">
-            <font>
-                <Font name="Chalkboard" size="13.0"/>
-            </font>
-        </Button>
-        <Button layoutX="237.0" layoutY="260.0" mnemonicParsing="false" styleClass="smallButton"
-                stylesheets="@/stylesheets/buttonstyle.css" text="START">
-            <font>
-                <Font name="Chalkboard" size="13.0"/>
-            </font>
-        </Button>
-        <Button layoutX="444.0" layoutY="265.0" mnemonicParsing="false" styleClass="bigButton"
-                stylesheets="@/stylesheets/buttonstyle.css" text="Game Settings">
-            <font>
-                <Font size="18.0"/>
-            </font>
-        </Button>
+          <VBox alignment="CENTER" prefHeight="450.0" prefWidth="600.0" spacing="20.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0">
+              <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#playScrabble" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Creating Game..." textAlignment="CENTER">
+                      <VBox.margin>
+                          <Insets />
+                      </VBox.margin>
+                      <font>
+                          <Font name="Chalkboard" size="36.0" />
+                      </font>
+                  </Button>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+            <HBox prefHeight="191.0" prefWidth="559.0">
+               <padding>
+                  <Insets right="100.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets left="350.0" right="350.0" />
+               </VBox.margin>
+               <children>
+                  <BorderPane prefHeight="191.0" prefWidth="600.0">
+                     <left>
+                        <VBox prefHeight="188.0" prefWidth="179.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Search Player: " wrappingWidth="153.73281860351562">
+                                 <font>
+                                    <Font name="Chalkboard" size="18.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" top="20.0" />
+                                 </VBox.margin>
+                              </Text>
+                              <TextField prefHeight="41.0" prefWidth="159.0">
+                                 <VBox.margin>
+                                    <Insets left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <Button mnemonicParsing="false" text="+">
+                                 <VBox.margin>
+                                    <Insets left="120.0" top="10.0" />
+                                 </VBox.margin>
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                              </Button>
+                              <Button mnemonicParsing="false" text="START">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Button>
+                           </children>
+                        </VBox>
+                     </left>
+                     <center>
+                        <VBox prefHeight="191.0" prefWidth="169.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Scrabble Teammembers">
+                                 <font>
+                                    <Font name="Chalkboard" size="18.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" top="20.0" />
+                                 </VBox.margin>
+                              </Text>
+                              <TextArea prefHeight="43.0" prefWidth="167.0">
+                                 <padding>
+                                    <Insets left="10.0" right="10.0" />
+                                 </padding>
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin>
+                              </TextArea>
+                              <TextArea layoutX="10.0" layoutY="63.0" prefHeight="43.0" prefWidth="167.0">
+                                 <padding>
+                                    <Insets left="10.0" right="10.0" />
+                                 </padding>
+                              </TextArea>
+                              <TextArea layoutX="10.0" layoutY="106.0" prefHeight="43.0" prefWidth="167.0">
+                                 <padding>
+                                    <Insets left="10.0" right="10.0" />
+                                 </padding>
+                              </TextArea>
+                           </children>
+                        </VBox>
+                     </center>
+                     <right>
+                        <VBox prefHeight="191.0" prefWidth="114.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <Button mnemonicParsing="false" prefHeight="53.0" prefWidth="127.0" text="Game  Settings">
+                                 <VBox.margin>
+                                    <Insets top="60.0" />
+                                 </VBox.margin>
+                              </Button>
+                           </children>
+                        </VBox>
+                     </right>
+                  </BorderPane>
+               </children>
+            </HBox>
+              </children>
+          </VBox>
     </children>
 </AnchorPane>
